include/spark/scripting/SparkInterop.h

typedef struct SparkGameWorld SparkGameWorld;
typedef struct SparkGameObject SparkGameObject;
typedef struct SparkGameComponent SparkGameComponent;
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_box_collider_3d(
        SparkGameObject* object,
        const SparkVector3* halfExtents,
        const SparkVector3* offset);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_sphere_collider_3d(
        SparkGameObject* object,
        float radius,
        const SparkVector3* offset);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_rigidbody_3d(SparkGameObject* object);
SPARK_SCRIPT_API SparkGameComponent* spark_object_add_collision_sphere(
        SparkGameObject* object,
        float radius,
        const SparkVector3* localCenter);
SPARK_SCRIPT_API int spark_object_add_skinned_character_from_gltf(
        SparkGameObject* object,
        SparkGameWorld* world,
        const char* gltfPath,
        SparkGameComponent** outSkinnedMesh,
        SparkGameComponent** outAnimator,
        SparkGameComponent** outMaterial);
/* --- Transform --- */
SPARK_SCRIPT_API void spark_transform_get_translation(
        const SparkGameComponent* transform,
        SparkVector3* out);
SPARK_SCRIPT_API void spark_transform_set_translation(SparkGameComponent* transform, const SparkVector3* v);
SPARK_SCRIPT_API void spark_transform_set_rotation(SparkGameComponent* transform, const SparkQuaternion* q);
SPARK_SCRIPT_API void spark_transform_set_scale(SparkGameComponent* transform, const SparkVector3* s);
SPARK_SCRIPT_API void spark_transform_set_uniform_scale(SparkGameComponent* transform, float s);
/* --- Mesh --- */
SPARK_SCRIPT_API void spark_mesh_get_albedo(const SparkGameComponent* mesh, SparkVector3* out);
SPARK_SCRIPT_API void spark_mesh_set_albedo(SparkGameComponent* mesh, const SparkVector3* albedo);
SPARK_SCRIPT_API int spark_mesh_set_mesh_by_key(
        SparkGameComponent* mesh,
        SparkGameWorld* world,
        const char* meshKeyOrPath);
/* --- Material --- */
SPARK_SCRIPT_API void spark_material_set_tint(SparkGameComponent* material, const SparkVector3* tint);
SPARK_SCRIPT_API void spark_material_set_metallic(SparkGameComponent* material, float metallic);
SPARK_SCRIPT_API void spark_material_set_roughness(SparkGameComponent* material, float roughness);
SPARK_SCRIPT_API void spark_material_set_emissive(
        SparkGameComponent* material,
        const SparkVector3* rgb,
        float intensity);
SPARK_SCRIPT_API int spark_material_set_base_color_texture(
        SparkGameComponent* material,
        SparkGameWorld* world,
        const char* textureKeyOrPath);
/* --- Sprite --- */
SPARK_SCRIPT_API void spark_sprite_set_tint(SparkGameComponent* sprite, const SparkVector4* tint);
SPARK_SCRIPT_API void spark_sprite_set_uv_rect(SparkGameComponent* sprite, const SparkVector4* uvRect);
SPARK_SCRIPT_API void spark_sprite_set_sort_order(SparkGameComponent* sprite, int sortOrder);
/* --- Tilemap --- */
SPARK_SCRIPT_API void spark_tilemap_set_tile(
        SparkGameComponent* tilemap,
        uint32_t x,
        uint32_t y,
        uint16_t tileId);
/* --- Lights --- */
SPARK_SCRIPT_API void spark_point_light_set_color(SparkGameComponent* light, const SparkVector3* color);
SPARK_SCRIPT_API void spark_point_light_set_intensity(SparkGameComponent* light, float intensity);
SPARK_SCRIPT_API void spark_point_light_set_range(SparkGameComponent* light, float range);
SPARK_SCRIPT_API void spark_point_light_set_enabled(SparkGameComponent* light, int enabled);
SPARK_SCRIPT_API void spark_spot_light_set_color(SparkGameComponent* light, const SparkVector3* color);
SPARK_SCRIPT_API void spark_spot_light_set_intensity(SparkGameComponent* light, float intensity);
SPARK_SCRIPT_API void spark_spot_light_set_range(SparkGameComponent* light, float range);
SPARK_SCRIPT_API void spark_spot_light_set_cones(
        SparkGameComponent* light,
        float innerConeDegrees,
        float outerConeDegrees);
SPARK_SCRIPT_API void spark_spot_light_set_enabled(SparkGameComponent* light, int enabled);
/* --- Sky --- */
SPARK_SCRIPT_API void spark_sky_set_mode(SparkGameComponent* sky, SparkSceneSkyMode mode);
SPARK_SCRIPT_API void spark_sky_set_tint(SparkGameComponent* sky, const SparkVector3* tint);
SPARK_SCRIPT_API void spark_sky_set_enabled(SparkGameComponent* sky, int enabled);
/* --- Text overlay --- */
SPARK_SCRIPT_API void spark_text_overlay_set_text(SparkGameComponent* text, const char* utf8);
SPARK_SCRIPT_API void spark_text_overlay_set_screen_position(SparkGameComponent* text, float x, float y);
SPARK_SCRIPT_API void spark_text_overlay_set_font_size_pixels(SparkGameComponent* text, float px);
SPARK_SCRIPT_API void spark_text_overlay_set_color(SparkGameComponent* text, const SparkVector3* rgb);
SPARK_SCRIPT_API void spark_text_overlay_set_alpha(SparkGameComponent* text, float alpha);
SPARK_SCRIPT_API void spark_text_overlay_set_visible(SparkGameComponent* text, int visible);
/* --- GUI canvas --- */
SPARK_SCRIPT_API void spark_gui_canvas_set_enabled(SparkGameComponent* canvas, int enabled);
SPARK_SCRIPT_API void spark_gui_canvas_set_sort_order(SparkGameComponent* canvas, int sortOrder);
SPARK_SCRIPT_API void spark_gui_canvas_clear_root(SparkGameComponent* canvas);
/* --- Rigidbody 2D / 3D --- */
SPARK_SCRIPT_API void spark_rigidbody_2d_get_velocity(const SparkGameComponent* body, SparkVector2* out);
SPARK_SCRIPT_API void spark_rigidbody_2d_set_velocity(SparkGameComponent* body, const SparkVector2* v);
SPARK_SCRIPT_API int spark_rigidbody_2d_is_grounded(const SparkGameComponent* body);
SPARK_SCRIPT_API void spark_rigidbody_3d_get_velocity(const SparkGameComponent* body, SparkVector3* out);
SPARK_SCRIPT_API void spark_rigidbody_3d_set_velocity(SparkGameComponent* body, const SparkVector3* v);