include/spark/scripting/SparkInteropTypes.h

typedef struct SparkVector2 {
    float x;
    float y;
} SparkVector2;
typedef struct SparkVector3 {
    float x;
    float y;
    float z;
} SparkVector3;
typedef struct SparkVector4 {
    float x;
    float y;
    float z;
    float w;
} SparkVector4;
typedef struct SparkQuaternion {
    float x;
    float y;
    float z;
    float w;
} SparkQuaternion;
/** Mirrors SceneSkyMode. */
typedef enum SparkSceneSkyMode {
    SparkSceneSkyMode_None = 0,
    SparkSceneSkyMode_Box = 1,
    SparkSceneSkyMode_Dome = 2,
    SparkSceneSkyMode_Plane = 3,
} SparkSceneSkyMode;
typedef struct SparkGameObject SparkGameObject;