scripting/bindings/generated/Spark.Bindings/Native.g.cs


        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_box_collider_3d(SparkGameObject* @object, [NativeTypeName("const SparkVector3 *")] SparkVector3* halfExtents, [NativeTypeName("const SparkVector3 *")] SparkVector3* offset);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_sphere_collider_3d(SparkGameObject* @object, float radius, [NativeTypeName("const SparkVector3 *")] SparkVector3* offset);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_rigidbody_3d(SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameComponent* spark_object_add_collision_sphere(SparkGameObject* @object, float radius, [NativeTypeName("const SparkVector3 *")] SparkVector3* localCenter);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_object_add_skinned_character_from_gltf(SparkGameObject* @object, SparkGameWorld* world, [NativeTypeName("const char *")] sbyte* gltfPath, SparkGameComponent** outSkinnedMesh, SparkGameComponent** outAnimator, SparkGameComponent** outMaterial);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_transform_get_translation([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* transform, SparkVector3* @out);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_transform_set_translation(SparkGameComponent* transform, [NativeTypeName("const SparkVector3 *")] SparkVector3* v);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_transform_set_rotation(SparkGameComponent* transform, [NativeTypeName("const SparkQuaternion *")] SparkQuaternion* q);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_transform_set_scale(SparkGameComponent* transform, [NativeTypeName("const SparkVector3 *")] SparkVector3* s);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_transform_set_uniform_scale(SparkGameComponent* transform, float s);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_mesh_get_albedo([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* mesh, SparkVector3* @out);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_mesh_set_albedo(SparkGameComponent* mesh, [NativeTypeName("const SparkVector3 *")] SparkVector3* albedo);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_mesh_set_mesh_by_key(SparkGameComponent* mesh, SparkGameWorld* world, [NativeTypeName("const char *")] sbyte* meshKeyOrPath);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_material_set_tint(SparkGameComponent* material, [NativeTypeName("const SparkVector3 *")] SparkVector3* tint);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_material_set_metallic(SparkGameComponent* material, float metallic);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_material_set_roughness(SparkGameComponent* material, float roughness);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_material_set_emissive(SparkGameComponent* material, [NativeTypeName("const SparkVector3 *")] SparkVector3* rgb, float intensity);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_material_set_base_color_texture(SparkGameComponent* material, SparkGameWorld* world, [NativeTypeName("const char *")] sbyte* textureKeyOrPath);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_set_tint(SparkGameComponent* sprite, [NativeTypeName("const SparkVector4 *")] SparkVector4* tint);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_set_uv_rect(SparkGameComponent* sprite, [NativeTypeName("const SparkVector4 *")] SparkVector4* uvRect);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sprite_set_sort_order(SparkGameComponent* sprite, int sortOrder);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_tilemap_set_tile(SparkGameComponent* tilemap, [NativeTypeName("uint32_t")] uint x, [NativeTypeName("uint32_t")] uint y, [NativeTypeName("uint16_t")] ushort tileId);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_point_light_set_color(SparkGameComponent* light, [NativeTypeName("const SparkVector3 *")] SparkVector3* color);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_point_light_set_intensity(SparkGameComponent* light, float intensity);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_point_light_set_range(SparkGameComponent* light, float range);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_point_light_set_enabled(SparkGameComponent* light, int enabled);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_spot_light_set_color(SparkGameComponent* light, [NativeTypeName("const SparkVector3 *")] SparkVector3* color);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_spot_light_set_intensity(SparkGameComponent* light, float intensity);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_spot_light_set_range(SparkGameComponent* light, float range);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_spot_light_set_cones(SparkGameComponent* light, float innerConeDegrees, float outerConeDegrees);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_spot_light_set_enabled(SparkGameComponent* light, int enabled);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sky_set_mode(SparkGameComponent* sky, SparkSceneSkyMode mode);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sky_set_tint(SparkGameComponent* sky, [NativeTypeName("const SparkVector3 *")] SparkVector3* tint);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_sky_set_enabled(SparkGameComponent* sky, int enabled);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_text_overlay_set_text(SparkGameComponent* text, [NativeTypeName("const char *")] sbyte* utf8);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_text_overlay_set_screen_position(SparkGameComponent* text, float x, float y);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_text_overlay_set_font_size_pixels(SparkGameComponent* text, float px);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_text_overlay_set_color(SparkGameComponent* text, [NativeTypeName("const SparkVector3 *")] SparkVector3* rgb);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_text_overlay_set_alpha(SparkGameComponent* text, float alpha);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_text_overlay_set_visible(SparkGameComponent* text, int visible);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_gui_canvas_set_enabled(SparkGameComponent* canvas, int enabled);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_gui_canvas_set_sort_order(SparkGameComponent* canvas, int sortOrder);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_gui_canvas_clear_root(SparkGameComponent* canvas);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_2d_get_velocity([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* body, SparkVector2* @out);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_2d_set_velocity(SparkGameComponent* body, [NativeTypeName("const SparkVector2 *")] SparkVector2* v);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_rigidbody_2d_is_grounded([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* body);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_3d_get_velocity([NativeTypeName("const SparkGameComponent *")] SparkGameComponent* body, SparkVector3* @out);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_rigidbody_3d_set_velocity(SparkGameComponent* body, [NativeTypeName("const SparkVector3 *")] SparkVector3* v);
